# bot-shop-v1

./: pyproject.toml
app/: __main__.py  settings.py
app/bot/: states.py
app/bot/dialogs/: __init__.py
app/bot/dialogs/windows/: config.py  menu.py  shop.py  start.py
app/bot/handlers/: __init__.py  start.py
app/database/: __init__.py
app/database/models/: product.py  user.py
bot_shop_v1/: __main__.py  settings.py
bot_shop_v1/bot/: states.py
bot_shop_v1/bot/dialogs/: __init__.py
bot_shop_v1/bot/dialogs/windows/: config.py  menu.py  payment.py  shop.py
bot_shop_v1/bot/handlers/: start.py
bot_shop_v1/database/: __init__.py
bot_shop_v1/database/models/: order.py  product.py  user.py
bot_shop_v1/utils/: print_info.py
